# safe-migration-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
examples/: .env.example  config.yaml  demo.db  schema.prisma  seed_demo.py
src/safe_migrations_mcp/: __init__.py  config.py  db.py  migration.py  safety.py  server.py  state.py
tests/: test_smoke.py
